--- a/style.css
+++ b/style.css
@@ -1071,7 +1071,8 @@ section.not-found {
   width: 100%;
 }
 
-.entry__content aside p:last-child {
+.entry__content aside ul >
+p:last-child {
   margin-bottom: 0;
 }
 
@@ -1311,13 +1312,8 @@ section.not-found {
 @media (max-width: 959px) {
   .entry__content .alignright,
   .entry__content .alignleft {
-    float: none;
-    margin: 32px auto;
+    margin: 0 auto 32px;
     max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
 }
 
